<resources>
    <string name="app_name">VFR Mobile</string>
    <string name="devices">Devices</string>
    <string name="cockpit">Cockpit</string>
    <string name="helmet">Helmet</string>
    <string name="start_button">Start registering</string>
    <string name="pair_button">Pair device</string>
    <string name="unpair_button">Unpair device</string>
    <string name="search_devices">Search devices</string>
    <string name="ble_not_supported">Low Energy Bluetooth is not available on this device</string>
    <string name="scan_for_devices">Start scan</string>
    <string name="device_already_connected">You already selected that device!</string>
    <string name="cockpit_tag_register_text">Cockpit Tag</string>
    <string name="node_unreachable_dialog">At least one of nodes became unreachable. If you were registering data, process was stopped and from now data will not be saved.</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="node_unreachable_title">Connection with node lost!</string>
    <string name="gyroscope_label">Gyroscope</string>
    <string name="accelerometer_label">Accelerometer</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="battery_level">Battery level</string>
    <string name="current_reads">Current reads</string>
    <string name="export_data">Export data</string>
    <string name="stop">Stop</string>
    <string name="stop_scan">Stop scanning</string>
    <string name="recordings_history_export_button_label">Button</string>
    <string name="recordings_history_saved_flights_label">Saved flights</string>
    <string name="reconnect_attempt"> Attempting to reconnect lost node...</string>
    <!-- TESTING -->


</resources>
