<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.losek.vfrmobile.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/devices_label" />

    <TextView
        android:text="@string/cockpit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cockpit_label"
        android:layout_below="@+id/devices_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:text="@string/helmet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:id="@+id/helmet_label"
        android:layout_below="@+id/cockpit_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="CockpitTagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cockpit_tag"
        android:layout_below="@+id/cockpit_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:text="HelmetTagName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helmet_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/helmet_tag" />

    <Button
        android:text="@string/pair_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pair_cockpit_button"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/cockpit_tag"
        android:layout_centerHorizontal="true"
        android:onClick="pairCockpitTag"/>

    <Button
        android:text="@string/pair_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pair_helmet_button"
        android:layout_below="@+id/helmet_tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:text="@string/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"
        android:layout_below="@+id/pair_helmet_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />
</RelativeLayout>
