<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.losek.vfrmobile.DataRegistrationActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cockpitNameLayout">

        <TextView
            android:text="@string/cockpit_tag_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cockpitTagNameLabel"
            android:layout_toEndOf="@+id/cockpitTagNameLabel"

            android:id="@+id/cockpitTagLabel"
            android:layout_weight="0.2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/cockpitTagNameLabel"
            android:layout_weight="0.7"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/cockpitNameLayout"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/CockpitGyroLayout">

            <TextView
                android:text="@string/gyroscope_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gyroscope_label"
                android:layout_weight="0.3" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gyroscope_value"
                android:layout_weight="0.7" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/CockpitAccLayout">

            <TextView
                android:text="@string/accelerometer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acc_label"
                android:layout_weight="0.3" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acc_value"
                android:layout_weight="0.7" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
