<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/live_data_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.losek.vfrmobile.activity.LiveDataActivity">


    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/live_data_select_device"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/live_data_wrapper_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/live_data_select_device"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.16000003"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/live_data_select_device"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/live_data_acc_layout">

            <TextView
                android:text="@string/accelerometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_acc_label" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:layout_marginTop="15dp"
                android:id="@+id/live_data_acc_detail_layout">

                <TextView
                    android:text="@string/x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_acc_x_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_acc_x_val"
                    android:layout_weight="3" />

                <TextView
                    android:text="@string/y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_acc_y_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_acc_y_val"
                    android:layout_weight="3" />

                <TextView
                    android:text="@string/z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_acc_z_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_acc_z_val"
                    android:layout_weight="3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/live_data_gyro_layout"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/live_data_acc_layout"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:text="@string/gyroscope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_gyro_label" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_gyro_detail_layout"
                android:weightSum="12"
                android:layout_marginTop="15dp">

                <TextView
                    android:text="@string/x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_gyro_x_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_gyro_x_val"
                    android:layout_weight="3" />

                <TextView
                    android:text="@string/y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_gyro_y_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_gyro_y_val"
                    android:layout_weight="3" />

                <TextView
                    android:text="@string/z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_gyro_z_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_gyro_z_val"
                    android:layout_weight="3" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/live_data_magneto_layout"
            app:layout_constraintTop_toBottomOf="@+id/live_data_gyro_layout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:text="@string/magnetometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_magneto_label" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_magneto_detail_layout"
                android:weightSum="12"
                android:layout_marginTop="15dp">

                <TextView
                    android:text="@string/x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_magneto_x_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_magneto_x_val"
                    android:layout_weight="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_magneto_y_label"
                    android:layout_weight="1"
                    android:text="@string/y" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_magneto_y_val"
                    android:layout_weight="3" />

                <TextView
                    android:text="@string/z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_magneto_z_label"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/live_data_magneto_z_val"
                    android:layout_weight="3" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/live_data_battery_layout"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/live_data_magneto_layout"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:text="@string/battery_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_battery_label" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/live_data_battery_val" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
